--- a/src/pages/recipes/index.astro
+++ b/src/pages/recipes/index.astro
@@ -1,6 +1,8 @@
 ---
-import { getCollection } from "astro:content";
+import { Image } from "astro:assets";
 import Layout from "../../layouts/Layout.astro";
+import { getCollection } from "astro:content";
+
 const recipes = await getCollection("recipes");
 ---
 
@@ -13,14 +15,14 @@ const recipes = await getCollection("recipes");
         <li>
           <a href={`/recipes/${recipe.slug}`}>
             <h2>{recipe.data.title}</h2>
-            <p>{recipe.data.description}</p>
-          </a>
 
-          <ul>
-            {recipe.data.tags.map((tag) => (
-              <li>{tag}</li>
-            ))}
-          </ul>
+            <Image src={recipe.data.image} alt={recipe.data.title} />
+            <ul>
+              {recipe.data.tags.map((tag) => (
+                <li>{tag}</li>
+              ))}
+            </ul>
+          </a>
         </li>
       ))
     }
