--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,4 +1,4 @@
-<nav class="border-b border-gray-200 bg-white">
+<nav class="border-b border-gray-200 bg-white sticky top-0 w-full">
   <div class="mx-auto max-w-5xl px-4">
     <div class="flex h-16 items-center justify-between">
       <a
